初期表示画像のアドレス修正

--- a/jyanken.html
+++ b/jyanken.html
@@ -5,7 +5,7 @@
 
 <body>
     <p>じゃんけんまんSP</p>
-    <img id="pic" src="janken_gu.jpg" width="100" height="100"><br>
+    <img id="pic" src="images/jyanken_gu.png" width="100" height="100"><br>
 
     <button onclick="jyanken_click(0);"> グー</button>
     <button onclick="jyanken_click(1);"> チョキ</button>
