履歴機能追加
*過去5戦分

--- a/jyanken.html
+++ b/jyanken.html
@@ -15,7 +15,14 @@
     <div id="jya_player"></div>
     <div id="jya_enemy"></div>
     <div id="jya_result"></div>
-
+    <br />
+    <p>履歴</p>
+    <div id="jya_history1"></div>
+    <div id="jya_history2"></div>
+    <div id="jya_history3"></div>
+    <div id="jya_history4"></div>
+    <div id="jya_history5"></div>
+    
 </body>
 <script src="js/jyanken.js"></script>
 </html>
