【add】グルグル追加

--- a/jyanken.html
+++ b/jyanken.html
@@ -1,10 +1,16 @@
 <html>
 
 <head>
+    <link rel="stylesheet" type="text/css" href="css/style.css"></link>
 </head>
 
 <body>
     <p>じゃんけんまんSP</p>
+    <div class="container">
+        <div class="loader"></div>
+        <p>Now loading...</p>
+    </div>
+
     <img id="pic" src="images/jyanken_gu.png" width="100" height="100"><br>
 
     <button onclick="jyanken_click(0);"> グー</button>
